--- a/package.json
+++ b/package.json
@@ -14,21 +14,32 @@
     "autoprefixer": "^9.3.1",
     "babel-loader": "^8.0.4",
     "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jimp": "^0.5.6",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.5",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-nested": "^4.1.0",
     "postcss-preset-env": "^6.4.0",
+    "postcss-safe-parser": "^4.0.1",
+    "postcss-sass": "^0.3.5",
     "postcss-scss": "^2.0.0",
+    "postcss-syntax": "^0.34.0",
     "precss": "^3.1.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "responsive-loader": "^1.1.0",
     "sass-loader": "^7.1.0",
     "scss-loader": "^0.0.1",
+    "sharp": "^0.21.0",
+    "terser-webpack-plugin": "^1.1.0",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.25.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
